--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "no-console": "off",
         "no-inner-declarations": "off",
         "operator-linebreak": "off",
+        "implicit-arrow-linebreak": "off",
         "comma-dangle": [
             "error",
             {
